--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github_username:  imjch
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-cayman
+theme: minima 
 gems:
   - jekyll-feed
 exclude:
