--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Meriodasu
 email: imjch@hotmail.com
 description: > # this means to ignore newlines until "baseurl:"
     jc@baidu
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "imjch.github.io" # the subpath of your site, e.g. /blog
 url: "https://imjch.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  imjch
 
